[package]
name = "ngml"
version = "0.1.0"
authors = ["jcaposiena <julien.caposiena@sfr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.11.0"
html5ever = "0.25.0"
kuchiki = "0.8.1"
regex = "1.7.3"
